@@ -75,8 +75,9 @@ StructTS <- function(x, type = c("level", "trend", "BSM"),
         Z$h <- p[np+1L]*vx
         Z$P[] <- 1e6*vx
         Z$a[] <- a0
-        0.5 * sum(.Call(C_KalmanLike, y, Z$Z, Z$a, Z$P, Z$T, Z$V,
-                        Z$h, Z$Pn, -1L, FALSE, TRUE))/length(y)
+        x <- .Call(C_KalmanLike, y, Z$Z, Z$a, Z$P, Z$T, Z$V, Z$h, Z$Pn,
+                   -1L, FALSE, TRUE)
+        0.5 * sum(x[1:2])/x[3L]
     }
 
     series <- deparse(substitute(x))
