@@ -18,7 +18,7 @@
 KalmanLike(y, mod, nit = 0L, fast = TRUE)
 KalmanRun(y, mod, nit = 0L, fast = TRUE)
 KalmanSmooth(y, mod, nit = 0L)
-KalmanForecast(n.ahead = 10L, mod, fast = TRUE)
+KalmanForecast(n.ahead = 10L, mod, fast = FALSE)
 makeARIMA(phi, theta, Delta, kappa = 1e6)
 }
 \arguments{
@@ -103,6 +103,24 @@ makeARIMA(phi, theta, Delta, kappa = 1e6)
 }
 
 \seealso{
-   \code{\link{arima}}, \code{\link{StructTS}}. \code{\link{tsSmooth}}.
- }
+  \code{\link{arima}}, \code{\link{StructTS}}. \code{\link{tsSmooth}}.
+}
+
+\examples{
+## an ARIMA fit
+fit3 <- arima(presidents, c(3, 0, 0))
+predict(fit3, 12)
+## reconstruct this
+pr <- KalmanForecast(12, fit3$model)
+pr$pred + fit3$coef[4]
+sqrt(pr$var * fit3$sigma2)
+## and now do it year by year
+mod <- fit3$model
+for(y in 1:3) {
+  pr <- KalmanForecast(4, mod, TRUE)
+  print(list(pred = pr$pred + fit3$coef["intercept"], 
+             se = sqrt(pr$var * fit3$sigma2)))
+}
+}
+
 \keyword{ts}
