@@ -47,6 +47,10 @@
       \item (Windows.)  \code{file.symlink()} works around the
       undocumented restriction of the Windows system call to
       backslashes.  (Wish of \PR{15631}.)
+      
+      \item \code{KalmanForecast(fast = FALSE)} is now the default, and
+      the help contains an example of how \code{fast = TRUE} can be used
+      in this version.
     }
   }
 
@@ -237,6 +241,9 @@
       
       \item \code{KalmanForecast(fast = FALSE)} reported a stack
       imbalance.
+
+      \item The count of observations used by \code{KalmanRun} did not
+      take missing values into account.
     }
   }
 }
